Rework the Intro to VCF section

--- a/lectures/week_07/python_vcf_parsing_and_filtering.ipynb
+++ b/lectures/week_07/python_vcf_parsing_and_filtering.ipynb
@@ -68,25 +68,35 @@
    },
    "source": [
     "# Intro to VCF\n",
-    "The [Variant Call Format (VCF)](https://samtools.github.io/hts-specs/VCFv4.4.pdf) is a text file format. It contains meta-information header lines and data lines with information about a position in the genome. It can optionally contain genotype information on samples for each position.\n",
+    "The [Variant Call Format (VCF)](https://samtools.github.io/hts-specs/VCFv4.4.pdf) is a text file format. It contains meta-information header lines and data lines with information about a position in the genome. It can optionally contain genotype information on samples for each position. Each data line will contain specific annotations applicable to a genomic position, genomic alteration, and/or sample(s) while the meta-data header lines will describe each annotation, what information they contain and their format.\n",
     "\n",
-    "Meta-information header lines start with ## while data lines do not. Each data line represents a specific position and one or more genomic alterations at that position. The position is represented by the first two columns of the data line: CHROM and POS, the chromosome and genomic reference position, respecitively. The third column, ID, is a semicolon-separated list of unique identifiers where available. The third and fourth column, REF and ALT, are the reference base(s) of the genomic alteration, followed by a comma-separated list of one or more alternate (variant) base(s). Each entry in the ALT list corresponds to a separate genomic alteration.\n",
+    "Meta-information header lines start with ## while data lines do not. \n",
     "\n",
-    "## Types of header lines \n",
-    "### FILTER\n",
-    "Filters that have been applied to a data line\n",
+    "Each data line represents a specific position and one or more genomic alterations at that position. The #CHROM header is a special header that works like a TSV header and describes each column of the data lines. The position is represented by the first two columns of the data line: CHROM and POS, the chromosome and genomic reference position, respecitively. The third column, ID, is a semicolon-separated list of unique identifiers, where available. The third and fourth column, REF and ALT, are the reference base(s) of the genomic alteration, followed by a comma-separated list of one or more alternate (variant) base(s). Each entry in the ALT list corresponds to a separate genomic alteration.\n",
     "\n",
-    "### INFO\n",
-    "Per-variant data fields\n",
-    "\n",
-    "### FORMAT\n",
-    "Per-sample data fields\n",
-    "\n",
-    "### Other\n",
-    "Information applicable to the whole VCF\n",
+    "## Example\n",
+    "```\n",
+    "##fileformat=VCFv4.2\n",
+    "##FILTER=<ID=PASS,Description=\"All filters passed\">\n",
+    "##INFO=<ID=MBQ,Number=R,Type=Integer,Description=\"median base quality\">\n",
+    "##INFO=<ID=MMQ,Number=R,Type=Integer,Description=\"median mapping quality\">\n",
+    "##FORMAT=<ID=GT,Number=1,Type=String,Description=\"Genotype\">\n",
+    "##FORMAT=<ID=AD,Number=R,Type=Integer,Description=\"Allelic depths for the ref and alt alleles in the order listed\">\n",
+    "##FORMAT=<ID=AF,Number=A,Type=Float,Description=\"Allele fractions of alternate alleles in the tumor\">\n",
+    "##FORMAT=<ID=DP,Number=1,Type=Integer,Description=\"Approximate read depth (reads with MQ=255 or with bad mates are filtered)\">\n",
+    "#CHROM    POS    ID    REF    ALT    QUAL    FILTER    INFO    FORMAT    Exome_Normal    Exome_Tumor\n",
+    "chr17\t2364457\t.\tT\tG\t.\tPASS\tMBQ=30,30;MMQ=60,60\tGT:AD:AF:DP\t0/0:85,0:0.011:85\t0/1:43,58:0.573:101\n",
+    "```\n",
     "\n",
     "## Meta-information header lines\n",
-    "Provide information about how each field is encoded.\n",
+    "\n",
+    "Four types of meta-information header lines can be found in a VCF:\n",
+    "\n",
+    "- FILTER: Filters that have been applied to a data line\n",
+    "- INFO: Per-variant data fields\n",
+    "- FORMAT: Per-sample data fields\n",
+    "- Other: Information applicable to the whole VCF\n",
+    "\n",
     "### File format\n",
     "`##fileformat=VCFv4.2`\n",
     "\n",
@@ -128,7 +138,7 @@
     "`##GATKCommandLine=<ID=Mutect2,CommandLine=\"Mutect2 --tumor-sample Exome_Tumor --normal-sample Exome_Normal --output mutect.vcf.gz --input tumor.bam --input normal.bam --reference /storage1/fs1/bga/Active/gmsroot/gc2560/core/model_data/2887491634/build21f22873ebe0486c8e6f69c15435aa96/all_sequences.fa --f1r2-median-mq 50 --f1r2-min-bq 20 --f1r2-max-depth 200 --genotype-pon-sites false --genotype-germline-sites false --af-of-alleles-not-in-resource -1.0 --mitochondria-mode false --tumor-lod-to-emit 3.0 --initial-tumor-lod 2.0 --pcr-snv-qual 40 --pcr-indel-qual 40 --max-population-af 0.01 --downsampling-stride 1 --callable-depth 10 --max-suspicious-reads-per-alignment-start 0 --normal-lod 2.2 --ignore-itr-artifacts false --gvcf-lod-band -2.5 --gvcf-lod-band -2.0 --gvcf-lod-band -1.5 --gvcf-lod-band -1.0 --gvcf-lod-band -0.5 --gvcf-lod-band 0.0 --gvcf-lod-band 0.5 --gvcf-lod-band 1.0 --minimum-allele-fraction 0.0 --independent-mates false --disable-adaptive-pruning false --kmer-size 10 --kmer-size 25 --dont-increase-kmer-sizes-for-cycles false --allow-non-unique-kmers-in-ref false --num-pruning-samples 1 --min-dangling-branch-length 4 --recover-all-dangling-branches false --max-num-haplotypes-in-population 128 --min-pruning 2 --adaptive-pruning-initial-error-rate 0.001 --pruning-lod-threshold 2.302585092994046 --max-unpruned-variants 100 --linked-de-bruijn-graph false --disable-artificial-haplotype-recovery false --debug-assembly false --debug-graph-transformations false --capture-assembly-failure-bam false --error-correction-log-odds -Infinity --error-correct-reads false --kmer-length-for-read-error-correction 25 --min-observations-for-kmer-to-be-solid 20 --base-quality-score-threshold 18 --pair-hmm-gap-continuation-penalty 10 --pair-hmm-implementation FASTEST_AVAILABLE --pcr-indel-model CONSERVATIVE --phred-scaled-global-read-mismapping-rate 45 --native-pair-hmm-threads 4 --native-pair-hmm-use-double-precision false --bam-writer-type CALLED_HAPLOTYPES --dont-use-soft-clipped-bases false --min-base-quality-score 10 --smith-waterman JAVA --emit-ref-confidence NONE --max-mnp-distance 1 --force-call-filtered-alleles false --allele-informative-reads-overlap-margin 2 --min-assembly-region-size 50 --max-assembly-region-size 300 --active-probability-threshold 0.002 --max-prob-propagation-distance 50 --force-active false --assembly-region-padding 100 --padding-around-indels 75 --padding-around-snps 20 --padding-around-strs 75 --max-reads-per-alignment-start 50 --interval-set-rule UNION --interval-padding 0 --interval-exclusion-padding 0 --interval-merging-rule ALL --read-validation-stringency SILENT --seconds-between-progress-updates 10.0 --disable-sequence-dictionary-validation false --create-output-bam-index true --create-output-bam-md5 false --create-output-variant-index true --create-output-variant-md5 false --lenient false --add-output-sam-program-record true --add-output-vcf-command-line true --cloud-prefetch-buffer 40 --cloud-index-prefetch-buffer -1 --disable-bam-index-caching false --sites-only-vcf-output false --help false --version false --showHidden false --verbosity INFO --QUIET false --use-jdk-deflater false --use-jdk-inflater false --gcs-max-retries 20 --gcs-project-for-requester-pays  --disable-tool-default-read-filters false --max-read-length 2147483647 --min-read-length 30 --minimum-mapping-quality 20 --disable-tool-default-annotations false --enable-all-annotations false\",Version=\"4.1.8.1\",Date=\"November 12, 2020 7:45:52 PM GMT\">`\n",
     "\n",
     "### Header line (starts with CHROM)\n",
-    "The Header line describes each column of the data lines, which immediately follow this line.\n",
+    "The special Header line describes each column of the data lines, which immediately follow this line.\n",
     "\n",
     "`#CHROM POS ID REF ALT QUAL FILTER INFO`\n",
     "\n",
