--- a/lectures/week_01/bfx_workshop_01_overview.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview.ipynb
@@ -156,159 +156,7 @@
     "jupyter notebook\n",
     "```\n",
     "\n",
-    "From there, you can navigate to lectures/week_01, and click on the bfx_workshop_01_overview.ipynb file to launch *THIS* tutorial in an interactive browser session.  \n",
-    "\n",
-    "At this point, **switch from viewing the notebook on github to following it here in the interactive notebook you just launched.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### iPython and Shell Commands\n",
-    "\n",
-    "Many common shell commands can be executed directly through a Notebook using iPython\n",
-    "For more on iPython, see this [link](https://jakevdp.github.io/PythonDataScienceHandbook/01.05-ipython-and-shell-commands.html).\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/cmiller\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd ~"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34mDesktop\u001b[m\u001b[m/              \u001b[34mannotations\u001b[m\u001b[m/          notes.txt\r\n",
-      "\u001b[34mDocuments\u001b[m\u001b[m/            \u001b[34mbbedit\u001b[m\u001b[m/               \u001b[34mopt\u001b[m\u001b[m/\r\n",
-      "\u001b[34mDownloads\u001b[m\u001b[m/            \u001b[34mLibrary\u001b[m\u001b[m/              \u001b[34mbin\u001b[m\u001b[m/\r\n",
-      "\u001b[34mMovies\u001b[m\u001b[m/               \u001b[34mc.a.miller_s1_backup\u001b[m\u001b[m/ \u001b[34mscreenshots\u001b[m\u001b[m/\r\n",
-      "\u001b[34mMusic\u001b[m\u001b[m/                \u001b[34mgit\u001b[m\u001b[m/                  \u001b[34msrc\u001b[m\u001b[m/\r\n",
-      "\u001b[34mPictures\u001b[m\u001b[m/             \u001b[34migv\u001b[m\u001b[m/                  \u001b[35mtmp\u001b[m\u001b[m@\r\n",
-      "\u001b[34mPublic\u001b[m\u001b[m/               \u001b[34mimages\u001b[m\u001b[m/               \u001b[34mworkshop\u001b[m\u001b[m/\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mkdir -p ~/tempdir/test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34mtest\u001b[m\u001b[m/\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls ~/tempdir/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rmdir ~/tempdir/test; rmdir ~/tempdir"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### iPython and Shell Commands\n",
-    "\n",
-    "Many common shell commands can be executed directly through a Notebook using iPython\n",
-    "For more on iPython, see this [link](https://jakevdp.github.io/PythonDataScienceHandbook/01.05-ipython-and-shell-commands.html).  For now, let's try a simple shell command to print text to the screen:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-1c643a414f93>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-1c643a414f93>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    echo \"Hello World\"\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "echo \"Hello World\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "That didn't work, let's try preceding our command with an exclamation point:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!echo \"Hello World\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "That's enough for now - we'll talk more about jupyter notebooks and their usage later in the course. "
+    "From there, you can navigate to lectures/week_01, and click on the bfx_workshop_01_overview.ipynb file to launch *THIS* tutorial in an interactive browser session.  \n"
    ]
   },
   {
