--- a/lectures/week_01/bfx_workshop_01_overview_windows.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview_windows.ipynb
@@ -213,167 +213,7 @@
     "\n",
     "```jupyter notebook```\n",
     "\n",
-    "From there, you can navigate to lectures/week_01, and click on the bfx_workshop_01_overview_windows.ipynb file to launch *THIS* tutorial in an interactive browser session.  \n",
-    "\n",
-    "At this point, **switch from viewing the notebook on github to following it here in the interactive notebook you just launched.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### iPython and Shell Commands\n",
-    "\n",
-    "Many common shell commands can be executed directly through a Notebook using iPython\n",
-    "For more on iPython, see this [link](https://jakevdp.github.io/PythonDataScienceHandbook/01.05-ipython-and-shell-commands.html). Let's demonstrate by creating a directory, moving into it, and then removing it to clean up. \n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/cmiller\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd ~"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34mminiconda3\u001b[m\u001b[m/\r\n",
-      "\u001b[34mworkshop\u001b[m\u001b[m/\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mkdir -p testfolder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/cmiller/testfolder\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd ~/testfolder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/cmiller\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd ~"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rmdir ~/testfolder"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Other shell commands work as well. Let's try a simple shell command to print text to the screen:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-1c643a414f93>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-1c643a414f93>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    echo \"Hello World\"\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "echo \"Hello World\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "That didn't work, let's try preceding our command with an exclamation point:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!echo \"Hello World\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "That's enough for now - we'll talk more about jupyter notebooks and their usage later in the course. "
+    "From there, you can navigate to lectures/week_01, and click on the bfx_workshop_01_overview_windows.ipynb file to launch *THIS* tutorial in an interactive browser session.  \n"
    ]
   },
   {
