Better link for miniconda installation in windows instructions

--- a/lectures/week_01/bfx_workshop_01_overview_windows.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview_windows.ipynb
@@ -47,7 +47,7 @@
     "### Miniconda\n",
     "Conda is a package manager that works on Windows, Linux, and macOS. We will use a lightweight version of the package manager called Miniconda to install packages and manage the system environment.\n",
     "\n",
-    "Follow the [linux instructions for installing Miniconda](https://docs.anaconda.com/miniconda/#quick-command-line-install). \n",
+    "Follow the [linux instructions for installing Miniconda](https://www.anaconda.com/docs/getting-started/miniconda/install#linux-2). \n",
     "\n",
     "Once you've complete the install process, you'll need to add conda to your PATH variable, so that the programs in that directory can be executed without typing the full path.  This involves editing a file, which may be a bit of a challenge if you're not familiar with Linux.\n",
     "\n",
