Clearer PATH instructions for WSL conda setup

--- a/lectures/week_01/bfx_workshop_01_overview_windows.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview_windows.ipynb
@@ -63,6 +63,8 @@
     "\n",
     "```PATH=$PATH:/home/cmiller/miniconda3/bin```\n",
     "\n",
+    "- IMPORTANT: replace `cmiller` above with the username you set for your WSL installation\n",
+    "\n",
     "- hit return to add a newline, then hit ESC to exit editing mode\n",
     "\n",
     "- type `:wq` to save and quit\n",
