updating RIS links

--- a/lectures/week_01/bfx_workshop_01_overview.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview.ipynb
@@ -194,7 +194,7 @@
     "\n",
     "* WUIT's Research Infrastructure Services (RIS) supported [Scientific Compute Platform](https://ris.wustl.edu/services/compute/) provides info on getting started with the compute cluster and storage, both linked from their homepage, and with [more details on their documentation page](https://docs.ris.wustl.edu/).\n",
     "\n",
-    "* RIS has done their own trainings, and you can [view their archived videos and resources](https://docs.ris.wustl.edu/doc/compute/compute-workshops.html)\n",
+    "* RIS has done their own trainings, and you can [view their archived videos and resources](https://washu.atlassian.net/wiki/spaces/RUD/pages/2053963910/Compute+Workshops)\n",
     "\n",
     "* If you're looking to get started on submitting jobs to the cluster, working through this [LSF and Docker tutorial](https://gist.github.com/chrisamiller/4b17a8dd310374f078da2bf12b3e2a49) might prove useful.\n",
     "\n",
